--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<slf4j.version>1.6.6</slf4j.version>
 	<log4j.version>1.2.12</log4j.version>
 	<mysql.version>5.1.35</mysql.version>
-	
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
 	
   </properties>
   <dependencies>
